--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -101,6 +101,7 @@
         align-items: center;
         text-align: center;
         flex-direction: column;
+        
     }
 }
 
@@ -123,4 +124,36 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+.orgPage {
+    display: flex;
+    flex-direction: column;
+    .tasks{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        .task{
+            padding: 10px;
+        }
+    }
+
+}
+
+
+
+.homepage{
+    display: flex;
+    padding: 20px;
+    
+    .UserTodoList{
+        display: flex;
+        flex-direction: column;
+        padding-right: 40px;
+        .todoTask {
+            display: flex;
+            flex-direction: column;
+            padding: 10px;
+        }
+    }
 }
