--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -1,6 +1,7 @@
 .app {
-    display: flex;
+    //display: flex;
     justify-content: center;
+    padding: 40px;
 
     .container {
         width: 1024px;
